# SP-Offline-RL

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: config.yaml  config_val_user3.yaml
configs/algo/: bc_il.yaml  td3_bc.yaml
configs/data/: parquet_sp.yaml  parquet_sp_bc_train.yaml  parquet_sp_bc_val.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: mlp_actor.yaml  mlp_actor_critic.yaml
configs/sim_eval/: default.yaml  user3_card1.yaml
scripts/: build_bc_dataset.py  eval.py  evaluate_offline_policy.py  run_bc_experiment.sh  train.py
src/: __init__.py
src/algos/: __init__.py  base.py  bc_il.py  registry.py  td3_bc.py
src/core/: compile.py  exceptions.py  perf.py  registry.py  seed.py  types.py
src/data/: __init__.py  bc_dataset_builder.py  dataset_adapter.py  obs_act_buffer.py  parquet_adapter.py  replay_buffer_builder.py  schema.py  spec_registry.py  transforms.py
src/evaluation/: __init__.py  collector.py  dataset.py  deps.py  pipeline.py  policy_evaluator.py  replay_evaluator.py  scoring.py  types.py
src/logging/: factory.py  metrics.py
src/models/: __init__.py  base.py  mlp.py  registry.py
src/runners/: __init__.py  callbacks.py  common.py  data_builder.py  evaluator.py  mode.py  norm_builder.py  pipeline.py  runtime_builder.py  trainer.py  types.py
src/utils/: env.py  hydra.py  io.py
tests/: conftest.py
tests/factories/: __init__.py  config_factory.py  dataset_factory.py
tests/integration/: test_smoke_training.py
tests/perf/: benchmark_pipeline.py
tests/unit/: test_bc_dataset_builder.py  (+19 more)
(+3 files in other folders)
