[project]
name = "sp-offline-rl"
version = "0.1.0"
description = "Modular offline reinforcement learning framework for custom datasets and models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium",
    "hydra-core",
    "omegaconf",
    "pandas",
    "python-dotenv",
    "pyarrow",
    "tensorboard",
    "tianshou",
    "torch",
    "wandb",
    "optuna",
    "polars",
]

[dependency-groups]
dev = ["ipykernel", "pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: end-to-end smoke tests for training/evaluation pipelines",
]
